--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -425,7 +425,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 id="image-modal-title" class="modal-title"style="text-align:center;">Image</h4>
+                    <h4 id="image-modal-title" class="modal-title" style="text-align:center;">Image</h4>
                 </div>
                 <div class="modal-body">
                     <fieldset>
@@ -464,7 +464,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">썸네일로 사용할 영역을 선택하세요.</h4>
+                    <h4 class="modal-title" style="text-align:center;">썸네일로 사용할 영역을 선택하세요.</h4>
                 </div>
                 <div class="modal-body">
                     <div class="thumbnail-controller">
@@ -573,6 +573,7 @@ $(document).ready(function() {
           result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
           modifyOption($("#simri-option-text").val(), result.result, $("#simri-option-score").val());
           $("#simri-option-panel").css("display", "none");
+          $("#simri-option-file").val("");
       });
     });
 
