fix free mode menu

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -306,7 +306,7 @@
         <div id="floating-panel" style="display:none;">
             <div id="newImage" class="floating-panel-item" onclick="getImagePopup()">이미지 추가</div>
             <% if (projectType == "free") { %>
-            <div id="newScene" class="panel-floating" onclick="createScene()"></div>
+            <div id="newScene" class="floating-panel-item" onclick="createScene()">신 추가</div>
             <% } %>
             <% if (projectType == "simri") { %>
             <div id="newChoice" class="floating-panel-item" onclick="createOption()">선택지 추가</div>
