--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -275,6 +275,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right:0px;">
                 <ul class="nav navbar-nav">
+                  <li style="margin-left:10px;margin-top:7px;margin-right:5px;">
+                    <input type="text" class="form-control" id="project-title" value="<%= title %>"placeholder="Project Name" style="width:200px;">
+                  </li>
                     <li class="dropdown" style="width:80px;">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">페이지<span class="caret"></span></a>
                         <ul class="dropdown-menu" id="scene-dropdown">
@@ -620,7 +623,7 @@ $(document).ready(function() {
         $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
             result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
             if (imageFlag == FLAG_THUMBNAIL) {
-                saveProject(1, <%= sceneID %>);
+                saveProject(1, <%= sceneID %>, $("#project-title").val());
             }
         });
     });
@@ -732,7 +735,7 @@ function getThumbnailPopup() {
         imageFlag = FLAG_THUMBNAIL;
         $('#thumbnailModal').modal('show');
     } else {
-        saveProject(1, <%= sceneID %>);
+        saveProject(1, <%= sceneID %>, $("#project-title").val());
     }
 }
 
