--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -270,8 +270,9 @@
     <nav class="navbar navbar-default" style="height:50px;margin-bottom:0px;">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-            </div>
+            <a style="display:block" href="/project">
+                <div class="navbar-header"></div>
+            </a>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right:0px;">
                 <ul class="nav navbar-nav">
