--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -1,48 +1,256 @@
-html {
-    height: 100%;
-}
+body,
+    html {
+        height: 95%;
+        padding: 0;
+    }
 
-body {
-    padding-bottom: 0px;
-    height: 100%;
-}
+    #adjust-button {
+        width: 25px;
+        height: 25px;
+        float: left;
+        position: absolute;
+        top: 28px;
+        right: 35px;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../img/adjust_icon.png);
+        border-color: #ffffff;
+    }
 
-.container {
+    #remove-button {
+        top: 28px;
+        right: 70px;
+        width: 25px;
+        height: 25px;
+        float: right;
+        position: absolute;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../img/delete_icon.png);
+        border-color: #ffffff;
+    }
 
-    width: 100%;
-    height: 100%;
-}
+    #hidden-adjust-button {
+        width: 25px;
+        height: 25px;
+        float: left;
+        position: absolute;
+        top: 48px;
+        right: 35px;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../img/adjust_icon.png);
+        border-color: #ffffff;
+    }
 
-#wrapper {
-    height: 100%;
-}
+    #hidden-remove-button {
+        top: 48px;
+        right: 70px;
+        width: 25px;
+        height: 25px;
+        float: right;
+        position: absolute;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../img/delete_icon.png);
+        border-color: #ffffff;
+    }
 
-#main-canvas {
-    height: 100%;
-    padding: 0;
-}
+    #simri-panel-image {
+        width: 280px;
+        height: 250px;
+        position: fixed;
+        background-size: 100% 100%;
+        background-image: url('../img/bg_input.png')
+    }
 
-.sidebar-nav-fixed {
-    border: 0;
-    margin: 0;
-    width: 14%;
-}
 
-table.object-list {
-    display: inline-block;
-    width: 100%;
-    display: table;
-}
+    #simri-panel-end-image {
+        width: 280px;
+        height: 250px;
+        position: fixed;
+        background-size: 100% 100%;
+        background-image: url('../img/popup_end.png')
+    }
 
-table.object-list tbody {
-    /*width: 100%;*/
-}
+    #hidenseek-panel-image {
+        width: 280px;
+        height: 250px;
+        position: fixed;
+        background-size: 100% 100%;
+        background-image: url('../img/popup_spot.png')
+    }
 
-table.object-list thead {
-    max-width: 100%;
-}
+    .object-panel {
+        width: 300px;
+        height: 300px;
+        /*border-radius: 1%;*/
+        position: fixed;
+        top: 100px;
+        left: 100px;
+        /*box-shadow: 0px 2px 5px #666;*/
+        z-index: 1;
+        background: rgba(0, 0, 0, 0);
+    }
 
-iframe {
-    border: 0;
-    width: 100%;
-}
+    .panel-floating {
+        height: 60px;
+        margin-bottom: 10px;
+        margin-right: 0px;
+        z-index: 1;
+        cursor: pointer;
+        text-align: center;
+    }
+
+    .panel-floating-inside {
+        display: inline-flex;
+        align-items: center;
+        padding: 5px;
+        height: 100%;
+    }
+
+    .header-item {
+        width: 100px;
+        height: 50px;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .header-span {
+        margin: auto;
+    }
+
+    .navbar-header {
+        width: 48px;
+        height: 48px;
+        background-size: 100% 100%;
+        background-image: url('../img/editor_logo.png')
+    }
+
+    #floating-button {
+        width: 65px;
+        height: 65px;
+        border-radius: 50%;
+        position: fixed;
+        top: 150px;
+        left: 20px;
+        cursor: pointer;
+        z-index: 2;
+        background-size: 100% 100%;
+        background-image: url('../img/editor_icon_mouseout.png')
+    }
+
+    #floating-button:hover {
+        background-size: 100% 100%;
+        background-image: url('../img/editor_icon_mouseon.png')
+    }
+
+    #floating-panel {
+        border-radius: 15px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 220px;
+        height: auto;
+        position: fixed;
+        top: 145px;
+        left: 85px;
+        z-index: 1;
+        background-color: #3795f3;
+        box-shadow: 1px 1px 40px #000000;
+    }
+
+    .floating-panel-item+.floating-panel-item {
+        margin-top: 15px;
+    }
+
+    .floating-panel-item {
+        text-align: center;
+        color: white;
+        font-size: 25px;
+        /*font-style: bold;*/
+    }
+
+    .floating-panel-item:hover {
+        text-align: center;
+        color: white;
+        font-size: 25px;
+        font-style: bold;
+        background-color: #000000;
+    }
+
+    #container {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+    }
+
+    #main-canvas {
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+    }
+
+    #hidenseek-clock {
+        background-size: 100% 100%;
+        background-image: url(../img/template/icon_time_final.png);
+        z-index: 1;
+        position: fixed;
+        width: 200px;
+        height: 200px;
+        right: 10px;
+    }
+
+    .thumbnail-controller form {
+        display: table;
+    }
+
+    .thumbnail-controller p {
+        display: table-row;
+    }
+
+    .thumbnail-controller label {
+        display: table-cell;
+    }
+
+    .thumbnail-controller input {
+        display: table-cell;
+    }
+
+    input[type="range"] {
+        position: relative;
+    }
+
+    input[type="range"]:before {
+        position: absolute;
+        top: -17px;
+        left: 50%;
+        margin-left: -10px;
+        content: attr(value);
+        display: block;
+        text-align: center;
+        width: 20px;
+        height: 10px;
+    }
+
+    .image-upload>input {
+        display: none;
+    }
+
+    .image-upload img {
+        width: 70px;
+        height: 30px;
+        cursor: pointer;
+    }
+    /*
+  .modal-content{
+    background-size: 100% 100%;
+    background-image:url('../img/editor_modal_bg.png')
+  }*/
